<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#9bcff2">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageView_list_book"
        android:src="@drawable/book_img"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">
    <TextView
        android:id="@+id/bookIdTextView_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_text_view"
        android:layout_weight="1"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/bookTitleTextVieww_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_weight="1"
        android:layout_gravity="center" />
    <TextView
        android:id="@+id/bookAuthorTextVieww_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_weight="1"
        android:layout_gravity="center" />
    </LinearLayout>

</LinearLayout>